--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "homepage": "https://github.com/jeroenheijmans/advent-of-code-charts#readme",
   "dependencies": {
-    "chart.js": "2.7.1",
-    "moment": "2.19.3"
+    "chart.js": "^2.7.3",
+    "moment": "^2.22.2"
   }
 }
