--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "advent-of-code-charts",
   "description": "Adhoc solution for Advent of Code leaderboard charts",
   "scripts": {
-    "serve": "serve src/. & livereload src/."
+    "start": "npm-run-all --parallel serve watch",
+    "serve": "serve src/.",
+    "watch": "livereload src/."
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "livereload": "^0.7.0",
+    "npm-run-all": "^4.1.5",
     "serve": "^10.1.1"
   }
 }
