Replace medal unicode chars with medal SVG images

--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,22 @@
     "version": "5.0.0",
     "author": "Jeroen Heijmans",
     "description": "Inject charts in your private leaderboard page for Advent of Code - see https://github.com/jeroenheijmans/advent-of-code-charts",
-    "icons": { 
+    "icons": {
         "16": "icon16.png",
         "48": "icon48.png",
-       "128": "icon128.png" 
+       "128": "icon128.png"
     },
     "content_scripts": [
         {
-            "matches": ["http://adventofcode.com/*", "https://adventofcode.com/*"],
+            "matches": ["*://adventofcode.com/*/leaderboard/private/view/*"],
             "js": ["moment.min.js", "Chart.min.js", "app.js"],
             "run_at": "document_end"
+        }
+    ],
+    "web_accessible_resources": [
+        {
+             "resources": ["*.svg"],
+             "matches": ["*://adventofcode.com/*"]
         }
     ]
 }
