Upgrade libraries (incl. Chart.js)
Fixes #81

Probably the build scripts and so forth are not entirely correct
yet, but we'll fix that when we get to creating a new release, so
we just deal with a commit that might not be publishable.

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "content_scripts": [
         {
             "matches": ["http://adventofcode.com/*", "https://adventofcode.com/*"],
-            "js": ["moment.min.js", "Chart.min.js", "app.js"],
+            "js": ["moment.min.js", "chart.umd.js", "chartjs-adapter-moment.min.js", "app.js"],
             "run_at": "document_end"
         }
     ]
