--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jeroenheijmans/advent-of-code-charts#readme",
   "dependencies": {
     "chart.js": "4.1.2",
+    "chartjs-adapter-moment": "1.0.1",
     "moment": "2.29.4"
   },
   "devDependencies": {
