--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
     "content_scripts": [
         {
             "matches": ["http://adventofcode.com/*", "https://adventofcode.com/*"],
+            "css": ["app.css"],
             "js": ["moment.min.js", "chart.umd.js", "chartjs-adapter-moment.min.js", "app.js"],
             "run_at": "document_end"
         }
